--- a/Quiz.html
+++ b/Quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mama mo quiz</title>
+    <title>Supporting Details Hunt!</title>
      <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,11 +11,13 @@
     
     <div class="container">
         <div id="landingPage" class="landing-page">
-            <h1>🌌 Rawr Rawr Rawr 🌌</h1> //edit this if you want
-            <p class="subtitle">Title mo bitch</p>
+            <h1>🌌 Supporting Details Hunt! 🌌</h1> Presented by: Ms. Reg Reynalda
+            <p class="subtitle">Are you ready?</p>
             
             <div class="intro-text">
-               emerut intro
+               1.	Divide the class into three (3) groups.
+               2.	The groups will pick one member who will choose one card and answer if the sentence is a supporting detail for the topic sentence given.
+               3.	The group that will accumulate the most correct answer will be the winner.
             </div>
 
             <div class="quiz-grid" id="quizGrid"></div>
