--- a/Quiz.html
+++ b/Quiz.html
@@ -15,8 +15,8 @@
             <p class="subtitle">Are you ready?</p>
             
             <div class="intro-text">
-               1.	Divide the class into three (3) groups.
-               2.	The groups will pick one member who will choose one card and answer if the sentence is a supporting detail for the topic sentence given.
+               1.	Divide the class into three (3) groups. <br>
+               2.	The groups will pick one member who will choose one card and answer if the sentence is a supporting detail for the topic sentence given.<br>
                3.	The group that will accumulate the most correct answer will be the winner.
             </div>
 
