--- a/Quiz.html
+++ b/Quiz.html
@@ -16,7 +16,8 @@
             
             <div class="intro-text">
                1.	Divide the class into three (3) groups. <br>
-               2.	The groups will pick one member who will choose one card and answer if the sentence is a supporting detail for the topic sentence given.<br>
+               2.	The groups will pick one member who will choose one card. <br>
+               3.   Answer if the sentence is a supporting detail for the topic sentence given.<br>
                3.	The group that will accumulate the most correct answer will be the winner.
             </div>
 
