--- a/Quiz.html
+++ b/Quiz.html
@@ -15,10 +15,11 @@
             <p class="subtitle">Are you ready?</p>
             
             <div class="intro-text">
+                DIRECTIONS:
                1.	Divide the class into three (3) groups. <br>
                2.	The groups will pick one member who will choose one card. <br>
                3.   Answer if the sentence is a supporting detail for the topic sentence given.<br>
-               4.	The group that will accumulate the most correct answer will be the winner.
+               4.	The group that accumulates the most number of correct answers will be the winner.
             </div>
 
             <div class="quiz-grid" id="quizGrid"></div>
