--- a/Quiz.html
+++ b/Quiz.html
@@ -15,11 +15,13 @@
             <p class="subtitle">Are you ready?</p>
             
             <div class="intro-text">
-                DIRECTIONS:
+                DIRECTIONS: <br>
                1.	Divide the class into three (3) groups. <br>
                2.	The groups will pick one member who will choose one card. <br>
                3.   Answer if the sentence is a supporting detail for the topic sentence given.<br>
                4.	The group that accumulates the most number of correct answers will be the winner.
+
+                LET'S GET STARTED!
             </div>
 
             <div class="quiz-grid" id="quizGrid"></div>
