--- a/Quiz.html
+++ b/Quiz.html
@@ -18,8 +18,8 @@
                 DIRECTIONS: <br>
                1.	Divide the class into three (3) groups. <br>
                2.	The groups will pick one member who will choose one card. <br>
-               3.   Answer if the sentence is a supporting detail for the topic sentence given.<br>
-               4.	The group that accumulates the most number of correct answers will be the winner.
+               3.   Answer if the sentence is a supporting detail for the topic sentence given. <br>
+               4.	The group that accumulates the most number of correct answers will be the winner. <br>
 
                 LET'S GET STARTED!
             </div>
